# specification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  TASKS.md  Taskfile.yml  bump-version.sh  cliff.toml
.github/workflows/: validate.yml
.task/checksum/: regenerate-schema
code/: main.py  pyproject.toml  validate.py  workout_share_validator.py
docs/: format-spec.md
examples/advanced/: complex-periodization.yaml
examples/basic/: bodyweight-beginner.yaml
schema/: workout-schema.json  workout-share-schema.json  workout-share-schema.jsonc  workout-share-schema.yaml
